--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/0fd908f4d0513d8b2400be736db141fb@2x.png">
     <link rel="stylesheet" href="./css/styles.css">
 
-</head>
+    <!-- Primary Meta Tags -->
+<title>Electro Web-Site UI</title>
+<meta name="title" content="Electro Web-Site UI">
+<meta name="description" content="Electro Responsive UI">
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="Electro Web-Site UI">
+<meta property="og:description" content="Electro Responsive UI">
+<meta property="og:image" content="https://i.postimg.cc/7JnWnt3H/pexels-photo-4568810-2x.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="Electro Web-Site UI">
+<meta property="twitter:description" content="Electro Responsive UI">
+<meta property="twitter:image" content="https://i.postimg.cc/7JnWnt3H/pexels-photo-4568810-2x.png">
+
+</head>
 <body>
 
     <!-- first section  -->
